monitor/grafana/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsUser: 472
        fsGroup: 472
      containers:
        - name: grafana
          image: grafana/grafana:12.4.5
          ports:
          - name: http
            containerPort: 3000
          volumeMounts:
            - name: grafana-data
              mountPath: /var/lib/grafana
          resources:
            requests:
              cpu: 250m
              memory: 750Mi
            limits:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-pvc
