monitor/grafana/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingressroute
  namespace: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.ltc.tsphotoclicks.net`)
      middlewares:
        - name: authentik-middleware
          namespace: authentik
      services:
        - name: grafana
          port: 3000
  tls:
    secretName: grafana-internal-secret
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: grafana
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
